21May unit5 part2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1017,4 +1017,107 @@
     <string name="preUnit4styleText44">10. Post / download photos, video clips and messages among a group of friends.</string>
 
 
+    <!--unit 5-->
+    <string name="Unit5styleText1">Unit 5</string>
+    <string name="Unit5styleText2">Communications systems</string>
+    <string name="Unit5styleText3">Objectives</string>
+    <string name="Unit5styleText4">At the end of this unit, students are able to describe these uses of computer communications; wireless messaging services, wireless Internet access points, cybercafé, global positioning system, groupware, voice mail, and Web services</string>
+    <string name="Unit5styleText5">Warm-up</string>
+    <string name="Unit5styleText6">What is the purpose of the components required for successful communications?</string>
+    <string name="Unit5styleText7">a. It is required a sending device, a communication channel and a receiving device.</string>
+    <string name="Unit5styleText8">b. It is required a sending device, a text channel and receiving device.</string>
+    <string name="Unit5styleText9">Presentation</string>
+    <string name="Unit5styleText10">1. What is the purpose of the components required for successful communications, and what are various sending and receiving devices?</string>
+    <string name="Unit5styleText11"><b>Computer communication</b> describes a process in which two or more computers or devices transfer data, instructions and information. Successful communications requires <b>a sending device</b> that initiates a transmission instruction, a communications device that connects the sending device to a communications channel to a receiving device, and <b>a receiving device</b> that accepts the transmission of data, instructions, or information. All types of computers and mobile devices serve as sending and receiving devices in a communication system</string>
+    <string name="Unit5styleText12">2. How are computer communications used?</string>
+    <string name="Unit5styleText13">Communications technologies include blogs, chat rooms, e-mail, fax, FTP, instant messaging , newsgroups, RSS, video conferencing, VoIP, Web, Web folders, and wikis. Users can send and receive wireless messages to and from smart phones, cell phones, handheld game consoles, and other mobile devices using <b>text messaging, picture messaging</b> and <b>video messaging,</b> and <b>wireless instant messaging.</b></string>
+    <string name="Unit5styleText14">People connect wirelessly to the Internet through <b>a wireless Internet access point.</b> A bot spot is a wireless net-work that provides Internet connection to mobile computers and devices. <b>A cybercafé</b> is a coffeehouse, restaurant, or other location that provides computers with Internet access. <b>A global positioning system (GPS)</b> analyzes signals sent by satellites to determine and earth-based receiver’s geographic location. Many software products provide a means to collaborate, or work online with other users connected to a server. <b>Groupware</b> is a software that helps groups of people work on projects or share information over a net-work . <b>Voice mail</b> allows someone to leave a voice massage for one or more people. Web services describe standardized software that enables programmers to create applications that communicate with other remote computers.</string>
+    <string name="Unit5styleText15">3. What are the advantages of using a Network, and how are LANs, MANs, and WANs different?</string>
+    <string name="Unit5styleText16"><b>A network</b> is a collection of computers and devices connected together via communications devices and transmission media. Advantages of using a network include facilitating communications, sharing hardware, sharing data and information, sharing software and transferring funds.</string>
+    <string name="Unit5styleText17">Networks typically are classified as a <b>local area network (LAN),</b> which connects computers in devices in a limited geographical area; <b>a metropolitan area network (MAN),</b> which covers a large geographic area using a communications channel that combines many types of media.</string>
+    <string name="Unit5styleText18"><b>A wide area network (WAN)</b> is a network that converts a large geographic area (such as a city, country, or the world) using a communication channel that combines many types of media such as telephone lines, cables, and radio waves. A Wan can be on large network on can consist of two or more LANs connected together. The Internet is the world’s largest WAN.</string>
+    <string name="Unit5styleText19">An example of a WAN</string>
+    <string name="Unit5styleText20">4. How are a client/ server and peer-to-peer Networks different, and how does a P2P Network work?</string>
+    <string name="Unit5styleText21">On <b>a client/ server network,</b> one or more computers are as a server, sometimes called a bust computer, which controls access to network resources and provides a centralized storage area, while the other computers and devices on the network are <b>clients</b> that rly on the server for resources. <b>A peer-to-peer network</b> is a simple network that typically connects fewer than 10 computers that have equal responsibilities and capabilities. <b>P2P</b> is and Internet peer-to peer network on which users access each other’s hard disks directly and exchange files over the Internet.</string>
+    <string name="Unit5styleText22">On a client /server network, one or more computes act as a server, and the clients access the server(s).</string>
+    <string name="Unit5styleText23">Each computer on a peer-to-peer network shares its hardware and software with other computer on the network.</string>
+    <string name="Unit5styleText24">5. How are a star network, Bus network, and Ring network different?</string>
+    <string name="Unit5styleText25"><b>A network topology</b> refers to the layout of computers and devices in a communications network. There commonly used network topologies are the star bus, and ring. On <b>a star network,</b> all computers and devices on the network connect to a central device, thus forming a star. <b>A bus network</b> consists of a single central cable so which all computers and other devices connect. <b>On a ring network,</b> a cable forms a closed loop (ring) with all computers and devices arranged along the ring.</string>
+    <string name="Unit5styleText26">6. A star network contains a single, centralized hub or switch through.</string>
+    <string name="Unit5styleText27">Devices in a bus network share a single data path.</string>
+    <string name="Unit5styleText28">7. What are various Network Communication Standards?</string>
+    <string name="Unit5styleText29">A network standard defines guidelines that specify the way computers access a medium, the type(s) of networks, and the type of physical cable or wireless technology used. Network communications standards include the following. <b>Ethernet</b> specifies that no central compute or device on the network should control when data can be transmitted. <b>Token ring</b> requires devices to share or pass a special signal, called a token. <b>TCP/ IP</b>  divides data into packets. <b>Wi-Fi</b> identifies any network based on the 802.11standards for wireless communications. <b>Bluetooth</b> uses short-rang radio waves to transmit data. <b>UWB</b> specifies how to UWB devices use short-rang radio wave to communicate at high speeds. <b>IrDa</b> transmits data wirelessly via infrared light waves. <b>RFID</b> uses radio signals for communications. <b>WiMAX</b> is a network standard developed by IEEE, that specifies how wireless devices communicate over the air in a wide area. The <b>Wireless Application Protocol (WAP)</b> specifies how some mobile devices can devices can display Internet content.</string>
+    <string name="Unit5styleText30">How Electronic RFID Toll Collection Works</string>
+    <string name="Unit5styleText31">8. What is the purpose of Communication Software?</string>
+    <string name="Unit5styleText32">Communication software helps users establish a connection to another computer or network; manages the transmission of data, instructions, and information; and provides and interface for users to communicate with one another.</string>
+    <string name="Unit5styleText33">9. What are commonly used communications devices?</string>
+    <string name="Unit5styleText34">A communications device is hardware capable of transmitting data between a sending device and a receiving device. A dial modem converts digital signals to analog signals and analog signals to digital signals so that data can travel along analog telephone lines. A digital modem sends and receives data and information to and from a digital line. An ISDN modem transits digital data to and from an ISDN line, while a <b>DSL, modem</b> transmits digital data to and from a DSL line. A <b>cable modem,</b> sometimes called a broadband modem, is a digital modem that sends and receives digital data over the cable television network. A <b>wireless modem</b> uses the cell phone network to connect to the Internet wirelessly from mobile computers an devices. A network card enables a computer and device that does not have built-in-networking capability to access a network. A wireless access point allows computers and devices to transfer data wirelessly. A router connects multiple computers or other routers together and transmits data to it correct destination on the network. A bub or switch is a device that provides a central point for cables in a network.</string>
+    <string name="Unit5styleText35">10. How can a Home Network be set up?</string>
+    <string name="Unit5styleText36">A home network connects multiple computers and devices in a home. An Ethernet network connects each computer to a hub with a physical cable. A home powerline cable network uses the same lines that bring electricity into the house. A phone line network uses existing telephone lines in a home. Most home networks use a Wi-Fi network</string>
+    <string name="Unit5styleText37">How to set up hardware for a Wi-Fi Home Network?</string>
+    <string name="Unit5styleText38">Practice</string>
+    <string name="Unit5styleText39">Direction: Click T for true and F for false.</string>
+    <string name="Unit5styleText40">1. A communication channel is channel is the media on which data, instructions, or information travel.</string>
+    <string name="Unit5styleText41">2. A web video messaging, users can send short video clip, usually about 15 minutes, in addition to all picture messaging services.</string>
+    <string name="Unit5styleText42">3. A network is a collection of computers and devices connected together via communications devices and transmission media.</string>
+    <string name="Unit5styleText43">4. A local area network (LAN) is a network that convers a large geographic area using a communications channel that combines may types of media such as telephone lines, cables, and radio waves.</string>
+    <string name="Unit5styleText44">5. A Web server is a computer that delivers requested Web pages to your computer.</string>
+    <string name="Unit5styleText45">6. An intranet is an internal network that uses Internet technologies.</string>
+    <string name="Unit5styleText46">7. The 40-Gigabit Ethernet standard is the fastest of the Ethernet standards.</string>
+    <string name="Unit5styleText47">8. Bluetooth does not require line-of-sight transmission.</string>
+    <string name="Unit5styleText48">9. At distance 0f 10 meters (about 33 feet), the data transfer rate for UWB devices is 480 Mbps..</string>
+    <string name="Unit5styleText49">10. Fiber to the Premises (FTTP) uses fiber-optic cable to provide extremely high-speed Internet access to a user’s physical permanent location.</string>
+    <string name="Unit5styleText50">Direction: Select the best answer.</string>
+    <string name="Unit5styleText51">1. With …………………, users can view message detail such as the length of calls and, in some cases, read message contents instead of listening to them.</string>
+    <string name="Unit5styleText52">a. Web services</string>
+    <string name="Unit5styleText53">b. Internet telephony</string>
+    <string name="Unit5styleText54">c. Visual voice mail</string>
+    <string name="Unit5styleText55">d. Video messaging</string>
+    <string name="Unit5styleText56">2. When an online meeting take place on the web, it is called …………………….</string>
+    <string name="Unit5styleText57">a. video messaging</string>
+    <string name="Unit5styleText58">b. a peer-to-peer network</string>
+    <string name="Unit5styleText59">c. a Web conference</string>
+    <string name="Unit5styleText60">d. a Web meeting</string>
+    <string name="Unit5styleText61">3. A document management system ……………………………..</string>
+    <string name="Unit5styleText62">a. provides for storage and management of a company’s documents.</string>
+    <string name="Unit5styleText63">b. allows users to share documents with other users in real time.</string>
+    <string name="Unit5styleText64">c. prints to a Web address associated with a particular printer.</string>
+    <string name="Unit5styleText65">d. Provides personal information manger functions.</string>
+    <string name="Unit5styleText66">4. A …………………………is a Web application that combines services from two or more sources, creating a new application.</string>
+    <string name="Unit5styleText67">a. document management system</string>
+    <string name="Unit5styleText68">b. Peer-to peer network</string>
+    <string name="Unit5styleText69">c. Web service</string>
+    <string name="Unit5styleText70">d. Mashup</string>
+    <string name="Unit5styleText71">5. ……………….are devices that provide a common central connection point for nodes on the network.</string>
+    <string name="Unit5styleText72">a. Packets and tokens</string>
+    <string name="Unit5styleText73">b. Hubs and switches</string>
+    <string name="Unit5styleText74">c. T1 and T3 lines</string>
+    <string name="Unit5styleText75">d. Routers and digital modems</string>
+    <string name="Unit5styleText76">6. ……………………….. Is a standard, specifically a protocol, that defines how a network uses radio signals to communicate with a tag placed in or attached to and object, and animal, or a person.</string>
+    <string name="Unit5styleText77">a. RFID</string>
+    <string name="Unit5styleText78">b. WiMAX</string>
+    <string name="Unit5styleText79">c. Bluetooth</string>
+    <string name="Unit5styleText80">d. UWB</string>
+    <string name="Unit5styleText81">Listening</string>
+    <string name="Unit5styleText82">Listen how to install a Wi-Fi Home Network and then order the right steps.</string>
+    <string name="Unit5styleText83">purchase the Wi-Fi equipment</string>
+    <string name="Unit5styleText84">subscribe to a high-speed Internet access provider</string>
+    <string name="Unit5styleText85">create the network through the use of software</string>
+    <string name="Unit5styleText86">connect the physical devices</string>
+    <string name="Unit5styleText87">Language work</string>
+    <string name="Unit5styleText88">Study this list of certainly expressions;</string>
+    <string name="Unit5styleText89">Practice</string>
+    <string name="Unit5styleText91">Direction: Order these sentences into future simple tense.</string>
+    <string name="Unit5styleText92">1. will / people/ in / elections / online./ vote</string>
+    <string name="Unit5styleText93">2. in/ children /my/ country/ have/ will/ all school / mobile phones.</string>
+    <string name="Unit5styleText94">3. will/ robot/ taxis/ controlled./ be</string>
+    <string name="Unit5styleText95">4. computers / most/ voice-controlled./ will / be</string>
+    <string name="Unit5styleText96">5. will / be / replaced/ a voice-based/ system./ email/ by</string>
+    <string name="Unit5styleText97">6. will/ computers/ become/ powerful/ more</string>
+    <string name="Unit5styleText98">7. transmit/ will /TV journalists/ be/ able to/ what/ by they/ see/ using / in/ their/ sensors/ optic nerves.</string>
+    <string name="Unit5styleText99">8. will /the / way/ we/ communicate/ VoIP phones/ revolutionize</string>
+    <string name="Unit5styleText100">9. replace/ computers/ mobile phones/ will / as / access/ to/ commonest way/ the/ the Internet.</string>
+    <string name="Unit5styleText101">10 . will / have / mobile phones./ pupils / the older/ many</string>
+
+
 </resources>
